<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_connection">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_accueil">Accueil</string>
    <string name="title_activity_maps">Map</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="key_google_maps">AIzaSyBBTnOzy7pTwcpM0ytgUUqolFo4vXoWmL0</string>

    <string name="img_pub">image de la publication</string>
    <string name="nouv">Ajouter Nouvelle</string>
    <string-array name="type_pub">
        <item>Type de Publication</item>
        <item>Publication Simple</item>
        <item>Menu du Jour</item>
        <item>Annonce Promotionnelle</item>
        <item>Annonce d\'événement</item>
    </string-array>

    <string-array name="list_menu">
        <item>Tous les Menus</item>
        <item>Ratatouille</item>
        <item>Gibier + Gratin</item>
        <item>Cabillot</item>
        <item>Cochon + Ecrasé</item>
    </string-array>

    <string-array name="type_voie">
        <item>Rue</item>
        <item>Boulevard</item>
        <item>Avenue</item>
        <item>Cours</item>
        <item>Chemin</item>
        <item>Place</item>
        <item>Square</item>
        <item>Impasse</item>
        <item>Montee</item>
        <item>Autre</item>
    </string-array>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="message_publier">Message à publier</string>
    <string name="titre_de_la_publication">Titre de la publication</string>
    <string name="select_image">Select Image</string>
    <string name="nom_du_menu">Nom du Menu</string>
    <string name="nom_de_l_entr_e">Nom de l\'Entrée</string>
    <string name="nom_du_plat">Nom du Plat</string>
    <string name="nom_du_dessert">Nom du Dessert</string>
    <string name="prix_du_menu">Prix du Menu</string>
    <string name="entree_plat_et_dessert">Entree, Plat et Dessert</string>
    <string name="title_activity_basic">basic</string>
    <string name="intitul_de_l_annonce">Intitulé de l\'Annonce</string>
    <string name="date_debut">Date Debut</string>
    <string name="date_fin">Date Fin</string>
    <string name="montant_de_la_r_duction">Montant de la réduction</string>
</resources>
