<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    <EditText
        android:id="@+id/titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/nom_du_menu"
        />
    <EditText
        android:id="@+id/entree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/entree_plat_et_dessert"/>
    <EditText
        android:id="@+id/descrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="Description du Menu"/>
    <EditText
        android:id="@+id/prix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/prix_du_menu"/>

    <ImageView
        android:id="@+id/imgPic"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <Button
        android:id="@+id/selctImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="selectImageFromGalery"
        android:layout_gravity="center"
        android:text="@string/select_image" />

</LinearLayout>