<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/titre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/titre_de_la_publication"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="Date de l'Evénément"/>
            <DatePicker
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <EditText
                android:id="@+id/descrip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/message_publier"/>

            <ImageView
                android:id="@+id/imgPic"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <Button
                android:id="@+id/selctImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="selectImageFromGalery"
                android:layout_gravity="center"
                android:text="@string/select_image" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>